objects/Apttus__IDEJobFieldExtraction__c.object
<CustomObject>
    <description>Holds one or more field related information received from the IDE Provider (e.g. KIRA)</description>
    <fields>
        <fullName>Apttus__ExactText__c</fullName>
        <description>Text used to normalize extracted data</description>
        <inlineHelpText>Text used to normalize extracted data</inlineHelpText>
        <label>Exact Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExtractedValue__c</fullName>
        <description>The extracted value for the field</description>
        <inlineHelpText>The extracted value for the field</inlineHelpText>
        <label>Extracted Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldHeader__c</fullName>
        <description>The field header text</description>
        <inlineHelpText>The field header text</inlineHelpText>
        <label>Field Header</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__FieldNumber__c</fullName>
        <description>The IDE field number</description>
        <inlineHelpText>The IDE field number</inlineHelpText>
        <label>Field Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IDEJobId__c</fullName>
        <description>ID of the associated job</description>
        <inlineHelpText>ID of the associated job</inlineHelpText>
        <label>IDE Job</label>
        <referenceTo>Apttus__IDEJob__c</referenceTo>
        <relationshipLabel>IDE Job Field Extractions</relationshipLabel>
        <relationshipName>IDEJobFieldExtractions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__LengthDifference__c</fullName>
        <description>The length difference for use by the refactoring algorithm</description>
        <inlineHelpText>The length difference for use by the refactoring algorithm</inlineHelpText>
        <label>Length Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__MetaDataFieldId__c</fullName>
        <description>The metadata detail associated with the field (e.g. APTS_Agreement__c.Name)</description>
        <inlineHelpText>The metadata detail associated with the field (e.g. APTS_Agreement__c.Name)</inlineHelpText>
        <label>MetaData Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__NormalizationResponse__c</fullName>
        <description>Normalized extracted data</description>
        <inlineHelpText>Normalized extracted data</inlineHelpText>
        <label>Normalization Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__PageNumber__c</fullName>
        <description>The page number of the analyzed document</description>
        <inlineHelpText>The page number of the analyzed document</inlineHelpText>
        <label>Page Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PatternSimilarity__c</fullName>
        <description>The pattern similarity for use by the refactoring algorithm</description>
        <inlineHelpText>The pattern similarity for use by the refactoring algorithm</inlineHelpText>
        <label>Pattern Similarity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__RefinedValue__c</fullName>
        <description>The refined value of the extracted data</description>
        <inlineHelpText>The refined value of the extracted data</inlineHelpText>
        <label>Refined Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__TextSimilarity__c</fullName>
        <description>The text similarity for use by the refactoring algorithm</description>
        <inlineHelpText>The text similarity for use by the refactoring algorithm</inlineHelpText>
        <label>Text Similarity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__WordWildCardValue__c</fullName>
        <description>The word wild card value of the extracted data</description>
        <inlineHelpText>The word wild card value of the extracted data</inlineHelpText>
        <label>Word Wild Card Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>IDE Job Field Extraction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDE Job Field Extractions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>